# third2021

./: .gitignore  .gitmodules  appseed - Shortcut.lnk  releasecomma.txt  releasedatetime.txt  releasedot.txt  rename_map.txt
_obs-studio/bitmap-source1/: CMakeLists.txt  bitmap-source.c  ca2plugin-main1.cpp  ca2plugin1.c
_obs-studio/bitmap-source1/data/locale/: en-US.ini
aaa_want_to_remove_aqua/: and_aqua.vcxproj  aqua.cbp  aqua.def  aqua.h  aqua.vcxproj  aqua.vcxproj.filters  aqua_graphics_alpha.cpp  aqua_graphics_alpha.h  draw2d_nanosvg.cpp  m_aqua.vcxproj  nord_aqua.vcxproj  prime100k.cpp  w_aqua.vcxproj
avcodec-59/: _references.txt
bzip2/: and_bzip2.vcxproj  bzip2.cbp  bzip2.vcxproj  bzip2_static.vcxproj  bzlib_private.h  m_bzip2.vcxproj  nord_bzip2.vcxproj  u_bzip2.vcxproj  w_axisbzip2.vcxproj  w_bzip2.vcxproj
cairo/: and_cairo.vcxproj  cairo-version.h  cairo.cbp  cairo.sln  cairo.vcxproj  config.h  m_cairo.vcxproj  nord_cairo.vcxproj
clientchannels/: clientchannels.cbp  clientchannels.sln  clientchannels.vcxproj  config.h  m_clientchannels.vcxproj  nord_clientchannels.vcxproj  u_clientchannels.vcxproj  w_axisclientchannels.vcxproj  w_clientchannels.vcxproj
crypto/: and_crypto.vcxproj  axiscrypto.def  crypto - Copy.def  crypto.cbp  crypto.def  crypto.vcxproj  crypto_.def  e_os.h  m_crypto.vcxproj  mem_ace.c  nord_crypto.vcxproj  nord_crypto.vcxproj.filters  w_crypto.vcxproj
expat/: expat.cbp  expat.vcxproj  nord_expat.vcxproj  nord_expat.vcxproj.filters
ffmpeg/: axisfreerdp.cbp  axisfreerdp.sln  axisfreerdp.vcxproj  axisfreerdp.vcxproj.filters  config.h  m_axisfreerdp.vcxproj  nord_axisffmpeg.vcxproj
fontconfig/: config-fixups.h  nord_fontconfig.vcxproj
freeimage/: freeimage.vcxproj  nord_freeimage.vcxproj
freerdp/: aaa_want_to_remove_config.h  buildflags.h  config.h  freerdp.cbp  freerdp.sln  freerdp.vcxproj  freerdp.vcxproj.filters  m_freerdp.vcxproj  m_freerdp.vcxproj.filters  nord_freerdp.vcxproj  nord_freerdp.vcxproj.filters  u_freerdp.vcxproj  w_axisfreerdp.vcxproj  w_axisfreerdp.vcxproj.filters  w_freerdp.vcxproj  w_freerdp.vcxproj.filters  w_freerdp2.sln  w_freerdp2.vcxproj
freetype/: freetype.cbp  freetype.sln  freetype.vcxproj  m_freetype.vcxproj  nord_freetype.vcxproj
fribidi/: nord_fribidi.vcxproj
harfbuzz/: nord_harfbuzz.vcxproj
hex2bin/: binary.h  common.h  hex2bin (copy).cbp  hex2bin.c  hex2bin.cbp  libcrc.h  nodeapp_hex2bin.cbp
iconv/: and_iconv.vcxproj  config.h  iconv.cbp  iconv.vcxproj  m_iconv.vcxproj  nord_iconv.vcxproj
id3lib/: CMakeLists.txt  acconfig.h  ca2_readers.cpp  config.h  framework.h  id3lib.vcxproj  id3lib.vcxproj.filters  m_id3lib.vcxproj  nord_core_id3lib.vcxproj  u_id3lib.vcxproj  w_id3lib.vcxproj
id3lib/examples/: demo_convert.cpp  demo_convert_options.h  demo_copy.cpp  demo_copy_options.h  demo_info.cpp  demo_info_options.h  demo_main.cpp  demo_simple.cpp  demo_tag.cpp  demo_tag_options.h  findeng.cpp  findstr.cpp  get_pic.cpp  test_compression.cpp  test_io.cpp  test_remove.cpp  test_unicode.cpp
id3lib/id3com/: EnumFields.cpp  EnumFields.h  ID3Field.cpp  ID3Field.h  ID3Frame.cpp  ID3Frame.h  ID3Tag.cpp  ID3Tag.h  StdAfx.cpp  StdAfx.h  id3com.cpp  resource.h
id3lib/id3lib.xcodeproj/: project.pbxproj
id3lib/id3lib/id3lib/: id3lib.h  id3lib.m
id3lib/id3lib/id3lib.xcodeproj/: project.pbxproj
id3lib/id3lib/id3lib.xcodeproj/project.xcworkspace/xcuserdata/camilo.xcuserdatad/: UserInterfaceState.xcuserstate
id3lib/id3lib/id3lib.xcodeproj/xcuserdata/camilo.xcuserdatad/xcschemes/: xcschememanagement.plist
id3lib/src/: c_wrapper.cpp  field.cpp  field_binary.cpp  field_def.h  field_impl.h  field_integer.cpp  field_string_ascii.cpp  field_string_unicode.cpp  flags.h  frame.cpp  frame_def.h  frame_impl.cpp  frame_impl.h  frame_parse.cpp  frame_render.cpp  globals.cpp  header.cpp  header.h  header_frame.cpp  header_frame.h  header_tag.cpp  header_tag.h  helpers.cpp  io.cpp  io_decorators.cpp  io_helpers.cpp  misc_support.cpp  mp3_header.h  mp3_parse.cpp  readers.cpp  spec.cpp  spec.h  tag.cpp  tag_file.cpp  tag_find.cpp  tag_impl.cpp  tag_impl.h  tag_parse.cpp  tag_parse_lyrics3.cpp  tag_parse_musicmatch.cpp  (+4 more)
idn/: CMakeLists.txt  config.h  idn.cbp  idn.vcxproj  m_idn.vcxproj  nord_idn.vcxproj  w_idn.vcxproj
include/: _impl_cairo.h  graphics_mathematics  mpg123.h  nanosvg.h  nanosvgrast.h  tridimensional_object_importer
jpeg/: _jpeg.vcxproj  and_jpeg.vcxproj  axisjpeg.vcxproj  jconfig.h  jinclude.h  jmorecfg.h  jpeg.cbp  jpeg.vcxproj  jpegint.h  m_jpeg.vcxproj  nord_jpeg.vcxproj  w_jpeg.vcxproj
jxr/: _nord_jxr.vcxproj  jxr.vcxproj  jxr_private.h
libmpg123/: clang_libmpg123.cbp  config.h  libmpg123.cbp  libmpg123.vcxproj  m_libmpg123.vcxproj  mpg123.cbp  nord_veriwell_libmpg123.vcxproj  u_libmpg123.vcxproj  w_libmpg123.vcxproj
nanosvg/: nanosvgrast.h
nordcrypto/: and_axiscrypto.vcxproj  axiscrypto.cbp  axiscrypto.vcxproj  m_axiscrypto.vcxproj  nord_axiscrypto.vcxproj  w_axiscrypto.vcxproj  w_axiscrypto.vcxproj.filters
nordopenssl/: and_axisopenssl.vcxproj  axisopenssl.cbp  axisopenssl.vcxproj  nord_axisopenssl.vcxproj  w_axisopenssl.vcxproj
openexr/: _nord_openexr.vcxproj  openexr.vcxproj
openjpeg/: _nord_openjpeg.vcxproj  openjpeg.vcxproj
openssl/: and_openssl.vcxproj  nord_openssl.vcxproj  nord_openssl.vcxproj.filters  openssl.cbp  openssl.vcxproj  w_openssl.vcxproj
ortp/: _.h  aaa_want_to_remove_ortp.cpp  avprofile.cpp  b64.cpp  b64.h  depcomp  event.cpp  event.h  jitterctl.cpp  jitterctl.h  ortp-config-linux.h  ortp-config-win32.h  ortp.cpp  ortp_utils.h  payloadtype.cpp  payloadtype.h  port.cpp  port.h  posixtimer.cpp  rtcp.cpp  rtcp.h  rtcpparse.cpp  rtp.h  rtpfile.cpp  rtpfile.h  rtpparse.cpp  rtpsession.cpp  rtpsession.h  rtpsession_inet.cpp  rtpsession_priv.h  rtpsignaltable.cpp  rtpsignaltable.h  rtptimer.cpp  rtptimer.h  srtp.cpp  (+15 more)
sn/: CMakeLists.txt  clang_sn.cbp  config.h  para_sn.cbp  sn-common.c  sn-common.h  sn-internals.h  sn-launchee.h  sn-launcher.h  sn-list.h  sn-monitor.h  sn-util.c  sn-util.h  sn-xmessages.c  sn-xmessages.h  sn-xutils.c  sn-xutils.h  sn.cbp  sn.h
(+1611 files in other folders)
